# hangman-ml

./: .gitignore  LICENSE  README.md  pyproject.toml
hangman_ml/: hangman_model.ipynb  process_data.ipynb
hangman_ml/data/: hangman_model.weights.h5
hangman_ml/utils/: n_gram_trie.py  samples_and_labels.py  trie.py
