[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.isort]
# See: https://pycqa.github.io/isort/docs/configuration/black_compatibility.html
profile = "black"

[tool.poetry]
authors = ["Ata Yardimci <atayardimci@outlook.com>"]
description = "Hangman ML"
name = "hangman-ml"
version = "1.0.1"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9.12"
keras = "^3.1.1"
numpy = "^1.26.4"
requests = "^2.31.0"
scikit-learn = "^1.4.2"
tensorflow = "^2.16.0"
h5py = "^3.10.0"
gymnasium = "^0.29.1"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
ipykernel = "^6.29.2"
